style(core): Core application styling

--- a/public/index.html
+++ b/public/index.html
@@ -3,59 +3,58 @@
 <head>
     <meta charset="UTF-8">
 
-    <title>Usual title</title>
-    <meta name="description" content="Usual description">
+    <title>Agile Poker</title>
+    <meta name="description" content="Make estimating stories fast, efficient and fun">
 
     <!-- Facebook Meta Tags
     ================================================== -->
-    <meta property="og:title"           content="Usual title">
-    <meta property="og:url"             content="">
-    <meta property="og:image"           content="">
+    <meta property="og:title"           content="Agile Poker">
+    <meta property="og:url"             content="https://agile.junaid.guru/">
+    <meta property="og:image"           content="https://agile.junaid.guru/assets/social.jpg">
     <meta property="og:image:type"      content="image/jpg">
     <meta property="og:image:width"     content="1200">
     <meta property="og:image:height"    content="630">
-    <meta property="og:description"     content="Usual description">
-    <meta property="og:site_name"       content="Usual title">
+    <meta property="og:description"     content="Make estimating stories fast, efficient and fun">
     <meta property="og:locale"          content="en_GB">
     <meta property="og:type"            content="website">
 
     <!-- Twitter Cards
     ================================================== -->
     <meta name="twitter:card"           content="summary_large_image">
-    <meta name="twitter:site"           content="">
-    <meta name="twitter:creator"        content="">
-    <meta name="twitter:url"            content="">
-    <meta name="twitter:title"          content="Usual title">
-    <meta name="twitter:description"    content="Usual description">
-    <meta name="twitter:image"          content="">
-
+    <meta name="twitter:url"            content="https://agile.junaid.guru/">
+    <meta name="twitter:title"          content="Agile Poker">
+    <meta name="twitter:description"    content="Make estimating stories fast, efficient and fun">
+    <meta name="twitter:image"          content="https://agile.junaid.guru/assets/social.jpg">
 
     <link rel="shortcut icon" href="data:image/x-icon;," type="image/x-icon">
+
 </head>
 <body class="site">
     <header class="site__header" aria-label="Main Header">
-        <p>Usual header notice</p>
+        <h1 class="no-margin no-padding"><a href="#">Agile Poker</a></h1>
+        <a href="https://github.com/poly-glot/agile-poker" target="_blank" rel="noopener">Github</a>
     </header>
 
     <main class="site__body" aria-label="Main View">
         <!--googleoff: index-->
-        <div class="site__notificaton">
-            <div class="alert" role="alert" id="js-alert">Preparing Application</div>
+        <div class="site__notification">
+            <div class="alert" role="alert" id="js-alert" data-cy="notification">Preparing Application</div>
         </div>
         <!--googleon: index-->
 
         <div class="views">
-            <section class="views__child" aria-labelledby="viewHeadingColumn1">
-                <h2 class="sr-only" id="viewHeadingColumn1">Column 1</h2>
+            <section class="views__child" aria-labelledby="viewHeadingInput">
+
             </section>
-            <section class="views__child" aria-labelledby="viewHeadingColumn2">
-                <h2 class="sr-only" id="viewHeadingColumn2">Column 2</h2>
+            <section class="views__child" aria-labelledby="viewHeadingOutput">
+
             </section>
         </div>
     </main>
 
     <footer class="site__footer" aria-label="Footer">
-      <p>Usual copyright notice</p>
+        <p>Usual copyright notice</p>
     </footer>
+
 </body>
 </html>
