--- a/public/index.html
+++ b/public/index.html
@@ -39,6 +39,9 @@
         <!--googleoff: index-->
         <div class="site__notification">
             <div class="alert" role="alert" id="js-alert" data-cy="notification">Preparing Application</div>
+            <div class="site__toolbar"  data-cy="toolbar">
+              <button type="button" id="js-share-link" class="button-link" data-cy="copy">Copy & Share Link</button>
+            </div>
         </div>
         <!--googleon: index-->
 
