feat(firebase): Added firebase + firebase functions

--- a/public/index.html
+++ b/public/index.html
@@ -31,7 +31,7 @@
 </head>
 <body class="site">
     <header class="site__header" aria-label="Main Header">
-        <h1 class="no-margin no-padding"><a href="/">Agile Poker</a></h1>
+        <h1 class="no-margin no-padding site__brand"><a href="/">Agile Poker</a></h1>
         <a href="https://github.com/poly-glot/agile-poker" target="_blank" rel="noopener">Github</a>
     </header>
 
