feat(firebase): Added signout

--- a/public/index.html
+++ b/public/index.html
@@ -45,6 +45,7 @@
             <div class="alert" role="alert" id="js-alert" data-cy="notification">Preparing Application</div>
             <div class="site__toolbar"  data-cy="toolbar">
               <button type="button" id="js-share-link" class="button-link" data-cy="copy">Copy & Share Link</button>
+              <button type="button" id="js-signout" class="button-link" data-cy="signout">Sign out</button>
             </div>
         </div>
         <!--googleon: index-->
