feat(room-dialog): Added Room Dialog UI

--- a/public/index.html
+++ b/public/index.html
@@ -186,6 +186,21 @@
           </div>
         </form>
       </dialog>
+
+      <dialog class="dialog" id="roomDialog">
+        <header class="dialog__header">
+          <h1 class="no-margin">Agile Poker</h1>
+        </header>
+        <form class="form dialog__content">
+          <div class="dialog__instructions">
+            Setup a new room for your team to estimate stories.
+          </div>
+          <div class="form__error" role="alert"></div>
+          <div class="dialog__submit">
+            <button type="submit"  data-cy="submit">CREATE A ROOM</button>
+          </div>
+        </form>
+      </dialog>
     </template>
 
 </body>
