feat(firebase): Added guest login

--- a/public/index.html
+++ b/public/index.html
@@ -28,6 +28,10 @@
 
     <link rel="shortcut icon" href="data:image/x-icon;," type="image/x-icon">
 
+    <link as="script" rel="preload" href="/__/firebase/8.6.7/firebase-app.js" />
+    <link as="script" rel="preload" href="/__/firebase/8.6.7/firebase-database.js" />
+    <link as="script" rel="preload" href="/__/firebase/8.6.7/firebase-app-check.js" />
+    <link as="script" rel="preload" href="/__/firebase/init.js" />
 </head>
 <body class="site">
     <header class="site__header" aria-label="Main Header">
@@ -202,6 +206,13 @@
         </form>
       </dialog>
     </template>
+
+    <script src="/__/firebase/8.6.7/firebase-app.js"></script>
+    <script src="/__/firebase/8.6.7/firebase-database.js"></script>
+    <script src="/__/firebase/8.6.7/firebase-auth.js"></script>
+    <script src="/__/firebase/8.6.7/firebase-functions.js"></script>
+    <script src="/__/firebase/8.6.7/firebase-app-check.js"></script>
+    <script src="/__/firebase/init.js?useEmulator=true"></script>
 
 </body>
 </html>
