feat(firebase): Added Room administrator functions

--- a/public/index.html
+++ b/public/index.html
@@ -46,6 +46,11 @@
             <div class="site__toolbar"  data-cy="toolbar">
               <button type="button" id="js-share-link" class="button-link" data-cy="copy">Copy & Share Link</button>
               <button type="button" id="js-signout" class="button-link" data-cy="signout">Sign out</button>
+              <template class="site__admin">
+                <button type="button" id="js-hide" class="button-link" data-cy="hideStoryPoints">Hide Story Points</button>
+                <button type="button" id="js-reveal" class="button-secondary" data-cy="showStoryPoints">Reveal Story Points</button>
+                <button type="button" id="js-reset" class="button-danger toolbar__reset"  data-cy="reset">RESET</button>
+              </template>
             </div>
         </div>
         <!--googleon: index-->
