--- a/public/index.html
+++ b/public/index.html
@@ -31,7 +31,7 @@
     <link as="script" rel="preload" href="/__/firebase/8.6.7/firebase-app.js" />
     <link as="script" rel="preload" href="/__/firebase/8.6.7/firebase-database.js" />
     <link as="script" rel="preload" href="/__/firebase/8.6.7/firebase-app-check.js" />
-    <link as="script" rel="preload" href="/__/firebase/init.js" />
+    <link as="script" rel="preload" href="/__/firebase/init.js?useEmulator=true" />
 </head>
 <body class="site">
     <header class="site__header" aria-label="Main Header">
@@ -159,7 +159,7 @@
               * We temporarily store your name and automatically generated a secret token in local storage on your machine. We destroy
               locally stored information when you are signed out of the site. We hold your name and story points for 24
               hours in a Google Cloud database hosted in Belgium. We are not using any analytics or Ad service. We do not
-              share your information with any third party.
+              share your information with any third party. However, We encourage you to use nick name due to another report of <a href="https://www.reuters.com/article/us-alphabet-google-privacy-lawsuit-idUSKCN24F2N4" target="_blank" rel="noopener noreferrer">Google violation of privacy policy</a>.
 
               <div class="form__error" id="localstorageRequired">
                 <b>Local storage is required for application to work.</b>
