ci: fix end to end visual testing

--- a/public/index.html
+++ b/public/index.html
@@ -31,7 +31,7 @@
     <link as="script" rel="preload" href="/__/firebase/8.6.7/firebase-app.js" />
     <link as="script" rel="preload" href="/__/firebase/8.6.7/firebase-database.js" />
     <link as="script" rel="preload" href="/__/firebase/8.6.7/firebase-app-check.js" />
-    <link as="script" rel="preload" href="/__/firebase/init.js?useEmulator=true" />
+    <link as="script" rel="preload" href="/firebase-init.js" />
 </head>
 <body class="site">
     <header class="site__header" aria-label="Main Header">
@@ -193,7 +193,7 @@
     <script src="/__/firebase/8.6.7/firebase-auth.js"></script>
     <script src="/__/firebase/8.6.7/firebase-functions.js"></script>
     <script src="/__/firebase/8.6.7/firebase-app-check.js"></script>
-    <script src="/__/firebase/init.js?useEmulator=true"></script>
+    <script src="/firebase-init.js"></script>
 
 </body>
 </html>
