ci: setup CD (Firebase Cloud)

--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,8 @@
     <title>Agile Poker</title>
     <meta name="description" content="Make estimating stories fast, efficient and fun">
 
+    <meta name="build_no" content="{{build_no}}" />
+
     <!-- Facebook Meta Tags
     ================================================== -->
     <meta property="og:title"           content="Agile Poker">
@@ -159,7 +161,7 @@
               * We temporarily store your name and automatically generated a secret token in local storage on your machine. We destroy
               locally stored information when you are signed out of the site. We hold your name and story points for 24
               hours in a Google Cloud database hosted in Belgium. We are not using any analytics or Ad service. We do not
-              share your information with any third party. However, We encourage you to use nick name due to another report of <a href="https://www.reuters.com/article/us-alphabet-google-privacy-lawsuit-idUSKCN24F2N4" target="_blank" rel="noopener noreferrer">Google violation of privacy policy</a>.
+              share your information with any third party.
 
               <div class="form__error" id="localstorageRequired">
                 <b>Local storage is required for application to work.</b>
